# kiot

./: .flatpak-manifest.yaml  .gitignore  CMakeLists.txt  README.md  README_UPDATE_FOR_UPSTREAM.md  core.cpp  core.h  dbusproperty.cpp  flatpakhelper.cpp  flatpakhelper.h  helper.sh  main.cpp  systray.cpp  systray.h
.github/workflows/: auto_release_flatpak.yml  ci_auto_release_flatpak.yml
dbus/: dbusproperties.cpp  dbusproperties.h  mprisplayer.cpp  mprisplayer.h  mprisroot.cpp  mprisroot.h  org.kde.Solid.PowerManagement.PolicyAgent.xml  policyagentinhibition.h  policyagentinterface.cpp  policyagentinterface.h
docs/: QT DBus interfaces.md  README.md  commit-messages.md
entities/: README.md  battery.cpp  battery.h  binarysensor.cpp  binarysensor.h  button.cpp  button.h  camera.cpp  camera.h  entities.h  entity.cpp  entity.h  event.cpp  event.h  lock.cpp  lock.h  mediaplayer.cpp  mediaplayer.h  notify.cpp  notify.h  number.cpp  number.h  select.cpp  select.h  sensor.cpp  sensor.h  switch.cpp  switch.h  textbox.cpp  textbox.h  update.cpp  update.h
flatpak/: CMakeLists.txt  README.md  org.davidedmundson.kiot.desktop  org.davidedmundson.kiot.metainfo.xml
integrations/: CMakeLists.txt  README.md  accentcolour.cpp  active.cpp  activewindow.cpp  activewindow_kwin.js  audio.cpp  battery.cpp  bluetooth.cpp  boot_select.cpp  camera.cpp  dndstate.cpp  docker.cpp  flatpak_updater.cpp  game_launcher.cpp  gamepad.cpp  integration_template.cpp  lockedstate.cpp  mpris.cpp  nightmode.cpp  notifications.cpp  powerinhibitor.cpp  scripts.cpp  shortcuts.cpp  suspend.cpp  systemd.cpp  systray.cpp  updater_flatpak.cpp
scripts/: branch_cleaner.sh  build_flatpak_installer.sh  install.sh  install_dependencies.sh  merge_with_master.sh  rebase_upstream.sh  rebase_with_master.sh
ui/: kcm_kiot.cpp
ui/ui/: main.qml
